Fix OS brand icon contrast

--- a/app/globals.css
+++ b/app/globals.css
@@ -31320,16 +31320,7 @@ a:focus-visible {
 
 .shell .brand-mark {
   border-color: transparent;
-  background-color: transparent;
-  background-image: url("/icons/foundr1-os-ui-dark.png");
-  background-size: 108%;
-}
-
-.os-home-shell .brand-mark {
-  border-color: var(--line);
-  background-color: #ffffff;
-  background-image: url("/icons/foundr1-os-ui-light.png");
-  background-size: 108%;
+  background: #000000 url("/icons/foundr1-os-512.png") center / 138% no-repeat;
 }
 
 .os-home-shell .brand-mark {
